# DeFlow

./: .gitignore  3_week_sprint_plan.md  API_DOCUMENTATION.md  CHAIN_FUSION_STRATEGY.md  CUSTOM_STRATEGY_COMPONENTS.md  CYCLE_OPTIMIZATION_STRATEGY.md  Cargo.toml  DAY_11_PLAN.md  DEFI_ARCHITECTURE_DESIGN.md  DEFLOW_TOKENOMICS_PLAN.md  DeFlow_Business_Whitebook.md  E2E_TESTING_GUIDE.md  FLOW_TOKEN_INTRODUCTION_SCRIPT.md  IDENTITYKIT_INTEGRATION_COMPLETE.md  Initial_design.md  LIQUID_GLASS_INTEGRATION.md  MAINNET_DEPLOYMENT_CHECKLIST.md  PHASE1_USER_ACQUISITION_STRATEGY.md  PRICE_ALERT_SOCIAL_FEATURE.md  RAMP_NETWORK_INTEGRATION.md  README.md  REVISED_DEVELOPMENT_PLAN.md  SUBSCRIPTION_DESIGN.md  TESTING_REPORT.md  TREASURY_SETUP_REQUIREMENTS.md  ZERO_DOWNTIME_IMPLEMENTATION_REPORT.md  components_for_imple.md  deploy-admin.sh  deploy-local.sh  deploy-mainnet.sh  dfx.json  dfx.production.json  fix_backend_prints.py  icp-chain-fusion-guide.md  package-lock.json  package.json  pitch.md  quick_fix_backend.sh  setup_admin.sh  switch-environment.sh  (+4 more)
src/DeFlow_backend/: Cargo.toml  DeFlow_backend.did  STABLE_MEMORY_IMPLEMENTATION.md
src/DeFlow_backend/src/: cycles_monitor_service.rs  events.rs  execution.rs  fee_collection.rs  http_client.rs  lib.rs  nodes.rs  scheduler_service.rs  stable_user_storage.rs  storage.rs  types.rs  user_management.rs  workflow.rs
src/DeFlow_backend/src/defi/: api.rs  arbitrage.rs  automated_strategy_api.rs  cross_chain_optimizer.rs  integration_tests.rs  mod.rs  performance_benchmarks.rs  portfolio_api.rs  portfolio_manager.rs  price_alert_defi_integration.rs  price_alert_service.rs  price_alert_service_broken.rs  price_oracle.rs  protocol_integrations.rs  real_protocol_integrations.rs  simple_template_api.rs  simple_workflow_templates.rs  social_media_formatter.rs  strategy_api.rs  strategy_authorization.rs  types.rs  wallet_validation.rs  workflow_template_api.rs  workflow_templates.rs  yield_api.rs  yield_engine.rs  yield_farming.rs
src/DeFlow_backend/src/defi/automated_strategies/: coordination_engine.rs  execution_engine.rs  mod.rs  opportunity_scanner.rs  performance_tests.rs  performance_tracker.rs  risk_manager.rs  risk_manager_tests.rs  strategy_registry.rs  strategy_registry_simple.rs  tests.rs
src/DeFlow_backend/src/defi/bitcoin/: addresses.rs  mod.rs  service.rs  transactions.rs  utxo.rs
src/DeFlow_backend/src/defi/ethereum/: addresses.rs  chain_config.rs  evm_rpc.rs  gas_estimator.rs  icp_gas_estimator.rs  icp_service.rs  l2_optimizer.rs  mod.rs  (+4 more)
src/DeFlow_backend/src/security/: mod.rs  rate_limiter.rs  spending_limits_enforcement.rs  validation_service.rs
src/DeFlow_pool/: Cargo.toml  DeFlow_pool.did
src/DeFlow_pool/src/: analytics.rs  business_model.rs  chain_fusion.rs  cross_chain.rs  lib.rs  pool_manager.rs  types.rs  types_fixed.rs
(+239 files in other folders)
