[package]
name = "DeFlow_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Bitcoin and crypto dependencies
sha2 = "0.10"
ripemd = "0.1"
hex = "0.4"
num-bigint = "0.4"
# Ethereum dependencies
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
rlp = "0.5"
