[package]
name = "DeFlow_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.17"
ic-cdk = "0.17.2"
ic-cdk-timers = "0.11.0"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Bitcoin and crypto dependencies
sha2 = "0.10"
ripemd = "0.1"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
# Ethereum dependencies
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"], default-features = false }
rlp = "0.5"
# Fix getrandom for WASM - pin to stable version and enable js feature
getrandom = { version = "0.2", features = ["js"] }
# Solana dependencies using official SOL RPC canister
bs58 = "0.5"
# Temporary removal of SOL RPC dependencies due to WASM compatibility issues
# sol-rpc-client = { git = "https://github.com/dfinity/sol-rpc-canister", package = "sol_rpc_client" }
# sol-rpc-types = { git = "https://github.com/dfinity/sol-rpc-canister", package = "sol_rpc_types" }
# Will use pure ICP implementation instead for WASM compatibility

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }

