[package]
name = "deflow_pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.17"
ic-cdk = "0.17.2"
ic-cdk-timers = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
ic-stable-structures = "0.6"
# Chain Fusion dependencies - IC WASM compatible with proper crypto
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
ripemd = { version = "0.1", default-features = false }
# SECURITY: Add proper cryptographic libraries for production use
bs58 = "0.5"
tiny-keccak = { version = "2.0", features = ["keccak"] }
# SECURITY: Add checked arithmetic support
num-traits = { version = "0.2", default-features = false }

[dependencies.ic-cdk-macros]
version = "0.17.2"

[features]
default = []